Fix : Resolve overlay shift issue [전종우] - add margin-right to body[data-scroll-locked] - change style  DialogOverlay, DrawerOverlay component

--- a/damul-client/src/index.css
+++ b/damul-client/src/index.css
@@ -125,3 +125,7 @@ html {
   font-family: "SUITE-Regular";
   overflow-y: scroll;
 }
+
+html > body[data-scroll-locked] {
+  margin-right: 0 !important;
+}
